adicão do módulo node ao projeto

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
     <modules>
         <module>client-java</module>
         <module>server-java</module>
+        <module>client-node</module>
     </modules>
 </project>
